# bbb-presentation-video

./: .gitignore  README  README.md  REUSE.toml  SECURITY.md  bbb-presentation-video  constraints-amazonlinux-2.txt  constraints-ubuntu-focal.txt  constraints-ubuntu-jammy.txt  dch_version.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: codeql.yml  package.yml  test-report.yml  test.yml
.reuse/: dep5
bbb_presentation_video/: __init__.py  events.py  renderer.py
bbb_presentation_video/bindings/: fontconfig.py
bbb_presentation_video/events/: __init__.py  errors.py  helpers.py  tldraw.py
bbb_presentation_video/renderer/: __init__.py  bbb_logo.pdf.license  cursor.py  presentation.py  tldraw.py  utils.py  whiteboard.py
bbb_presentation_video/renderer/tldraw/: __init__.py  easings.py  intersect.py  utils.py  vec.py
bbb_presentation_video/renderer/tldraw/fonts/: .uuid  IBMPlexSerif-Medium-3.006.otf.license  Shantell_Sans-Normal-SemiBold-1.011.otf.license  __init__.py
bbb_presentation_video/renderer/tldraw/geo/: arrow_geo 2.py  arrow_geo.py  arrow_geo_shape.py  checkbox.py  checkbox_geo_shape.py  cloud.py  cloud_geo_shape.py  diamond.py  diamond_geo_shape.py  ellipse.py  ellipse_geo_shape.py  hexagon.py  hexagon_geo_shape.py  oval.py  oval_geo_shape.py  rectangle.py  rectangle_geo_shape.py  rhombus.py  rhombus_geo_shape.py  star.py  star_geo_shape.py  trapezoid.py  trapezoid_geo_shape.py  triangle.py  triangle_geo_shape.py  xbox.py  xbox_geo_shape.py
bbb_presentation_video/renderer/tldraw/shape/: __init__.py  arrow.py  arrow_v2.py  draw.py  ellipse.py  frame.py  highlighter.py  line.py  poll.py  proto.py  rectangle.py  sticky.py  sticky_v2 2.py  sticky_v2.py  text.py  text_v2 2.py  text_v2.py  triangle.py
bbb_presentation_video/renderer/tldraw/v2/: utils.py
bbb_presentation_video/renderer/tldraw/v2/shape/: arrow_geo_shape.py  checkbox_geo_shape.py  cloud_geo_shape.py  diamond_geo_shape.py  ellipse_geo_shape.py  frame.py  geo.py  hexagon_geo_shape.py  oval_geo_shape.py  rectangle_geo_shape.py  rhombus_geo_shape.py  star_geo_shape.py  sticky.py  text.py  trapezoid_geo_shape.py  triangle_geo_shape.py  xbox_geo_shape.py
debian/: bbb-presentation-video.links  changelog  control  copyright
tests/renderer/tldraw/: test_shape.py
typings/cairo/: __init__.pyi
typings/gi/: __init__.pyi
typings/gi/repository/: GLib.pyi  GObject.pyi  Gdk.pyi  GdkPixbuf.pyi  Gio.pyi  Pango.pyi  PangoCairo.pyi  Poppler.pyi
typings/gi/repository/GLib/: __init__.pyi
typings/gi/repository/Gdk/: __init__.pyi
typings/gi/repository/GdkPixbuf/: __init__.pyi
typings/gi/repository/Pango/: __init__.pyi
typings/gi/repository/PangoCairo/: __init__.pyi
typings/gi/repository/Poppler/: __init__.pyi
