# SPDX-FileCopyrightText: 2022 BigBlueButton Inc. and by respective authors
#
# SPDX-License-Identifier: LGPL-3.0-or-later

[build-system]
requires = ["setuptools >= 42"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = "3.8"
strict = true
files = "."
mypy_path = "$MYPY_CONFIG_FILE_DIR/typings"

[[tool.mypy.overrides]]
module = "cattrs"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sortedcollections"
ignore_missing_imports = true
