# SPDX-FileCopyrightText: 2024 BigBlueButton Inc. and by respective authors
#
# SPDX-License-Identifier: LGPL-3.0-or-later

[build-system]
requires = ["setuptools >= 45.2", "setuptools_scm[toml] >= 3.4"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "post-release"

[tool.black]
target-version = ["py310"]

[tool.isort]
py_version = "310"
profile = "black"

[tool.mypy]
python_version = "3.10"
strict = true
files = "."
mypy_path = "$MYPY_CONFIG_FILE_DIR/typings"

[[tool.mypy.overrides]]
module = "sortedcollections"
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = [
    "--import-mode=importlib"
]
filterwarnings = [
    "ignore:Using or importing the ABCs:DeprecationWarning:sortedcollections"
]
