# SPDX-FileCopyrightText: 2022 BigBlueButton Inc. and by respective authors
#
# SPDX-License-Identifier: LGPL-3.0-or-later

[metadata]
name = bbb-presentation-video
version = 4.0.0
description = Render BigBlueButton recording events.xml file to a video
author = BigBlueButton Inc.
url = https://github.com/bigbluebutton/bbb-presentation-video
license = GPL-3.0-or-later
license_files = LICENSES/*
python_requires = >= 3.8
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Topic :: Communications :: Conferencing
    Topic :: Multimedia :: Video :: Conversion
    Private :: Do Not Upload

[options]
packages = find:
install_requires =
    attrs
    cattrs
    lxml
    packaging
    pycairo
    pygobject
    sortedcollections
    perfect-freehand

[options.entry_points]
console_scripts =
    bbb-presentation-video = bbb_presentation_video:main

[options.package_data]
* = *.pdf
