# SPDX-FileCopyrightText: 2024 BigBlueButton Inc. and by respective authors
#
# SPDX-License-Identifier: LGPL-3.0-or-later

[metadata]
name = bbb-presentation-video
description = Render BigBlueButton recording events.xml file to a video
author = BigBlueButton Inc.
url = https://github.com/bigbluebutton/bbb-presentation-video
license = GPL-3.0-or-later
license_files = LICENSES/*
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Topic :: Communications :: Conferencing
    Topic :: Multimedia :: Video :: Conversion
    Private :: Do Not Upload

[options]
packages = find_namespace:
python_requires = >= 3.8
setup_requires =
    setuptools_scm
install_requires =
    attrs >= 19.3.0
    lxml >= 4.5.0
    packaging >= 20.3
    pycairo >= 1.16.2
    pygobject >= 3.36.0
    sortedcollections >= 1.0.1
    perfect-freehand >= 1.2.0

[options.packages.find]
include =
    bbb_presentation_video
    bbb_presentation_video.*

[options.entry_points]
console_scripts =
    bbb-presentation-video = bbb_presentation_video:main

[options.package_data]
bbb_presentation_video.renderer = bbb_logo.pdf
bbb_presentation_video.renderer.tldraw.fonts = *.ttf
